Added Android Studio 2.1.2、2.2 beta and 2.1.3 download link

--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
                 </div>
                 <div id="android-studio">
                     <h4>Android Studio</h4>
+                    <blockquote style="color: gray">
+                        <strong style="color: red">注意:</strong>以下 Android Studio 下载链接全是 <code>dl.google.com</code> 开头的官方下载，无需tizi，<strong style="color: red">建议用浏览器直接从官方原始链接下载，不要用迅雷下载、不要用迅雷下载、不要用迅雷下载</strong>，重要的事情说三遍，避免类似<a href="https://www.zhihu.com/question/35721299">XCodeGhost</a>的事件！！！
+                    </blockquote>
                     <table>
                         <thead>
                             <tr>
@@ -287,96 +290,139 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.1.3 正式版 -->
+                            <tr>
+                              <td rowspan="6">2.1.3 正式版</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="3">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.1.3.0/android-studio-bundle-143.3101438-windows.exe">android-studio-bundle-143.3101438-windows.exe</a><br>(推荐)
+                              </td>
+                              <td>1.2 GB</td>
+                              <td>10d319c772b80f3cb0cde952451af8429ea1b68b</td>
+                              <td rowspan="6"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1f6ve98yjtxj21kw16baos.jpg">查看</a></td>
+                            </tr>
+
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/install/2.1.3.0/android-studio-ide-143.3101438-windows.exe">android-studio-ide-143.3101438-windows.exe</a><br>(不含SDK Tools)
+                              </td>
+                              <td>259.1 MB</td>
+                              <td>43f84de7e61f37880a126c3d567b7fa6cb90c90e</td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.1.3.0/android-studio-ide-143.3101438-windows.zip">android-studio-ide-143.3101438-windows.zip</a></td>
+                              <td>275.8 MB</td>
+                              <td>8ad212c55c7f4dc7ab490e4b7e77ec48001ae224</td>
+                            </tr>
+
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.1.3.0/android-studio-ide-143.3101438-mac.dmg">android-studio-ide-143.3101438-mac.dmg</a>
+                              </td>
+                              <td>273.9 MB</td>
+                              <td>06166759b0e1e1ee91a147dcf5227d897a184277</td>
+                            </tr>
+
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.1.3.0/android-studio-ide-143.3101438-linux.zip">android-studio-ide-143.3101438-linux.zip</a>
+                              </td>
+                              <td>273.4 MB</td>
+                              <td>8729e6f2f1fa58f04df9f8d1caac2f5be9dfc549</td>
+                            </tr>
+                             <!-- 2.2 beta -->
+                             <tr>
+                               <td rowspan="4">2.2 Beta</td>
+                                 </tr>
+                             <tr>
+                               <td >Windows</td>
+                               <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-windows.zip">android-studio-ide-145.3128856-windows.zip</a></td>
+                               <td>465.1 MB</td>
+                               <td>7d2c9861e90dc985b1e6ba78ebd8497b610a8620</td>
+                               <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f6ve698vw9j21ih1304jw.jpg">查看</a></td>
+                             </tr>
+                             <tr>
+                               <td><nobr>Mac OS X</nobr></td>
+                               <td align="left">
+                                         <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-mac.zip">android-studio-ide-145.3128856-mac.zip</a>
+                               </td>
+                               <td>462.1 MB</td>
+                               <td>050a443ffee51922eabddbcd260c845a8e06e4a9</td>
+                             </tr>
+                             <tr>
+                               <td>Linux</td>
+                               <td align="left">
+                                         <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-linux.zip">android-studio-ide-145.3128856-linux.zip</a>
+                               </td>
+                               <td>461.2 MB</td>
+                               <td>bafb5d7029d2678e8274e24da1c7ce0a00f3a644</td>
+                             </tr>
                             <!-- 2.2 Preview7 -->
                             <tr>
                               <td rowspan="4">2.2 Preview7</td>
                             </tr>
                             <tr>
                               <td >Windows</td>
-                              <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-windows.zip</a></td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.6/android-studio-ide-145.3111935-windows.zip">android-studio-ide-145.3111935-windows.zip</a></td>
                               <td>457.4 MB</td>
                               <td>e6ea4c9d9bf4ae46dbea82e3cc5638fd93194c33</td>
                               <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1f6iopbz2e6j20rm0i0ahj.jpg">查看</a></td>
                             </tr>
                             <tr>
                               <td><nobr>Mac OS X</nobr></td>
-                              <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-mac.zip</a></td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.6/android-studio-ide-145.3111935-mac.zip">android-studio-ide-145.3111935-mac.zip</a></td>
                               <td>457.9 MB</td>
                               <td>56327a0f97d999a6b7a15f3e9e513aa42881c989</td>
                             </tr>
                             <tr>
                               <td>Linux</td>
-                              <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-linux.zip</a></td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.6/android-studio-ide-145.3111935-linux.zip">android-studio-ide-145.3111935-linux.zip</a></td>
                               <td>447.1 MB</td>
                               <td>b85c4e27401f7f18af19e39e453cca8575041dbb</td>
                             </tr>
-                            <!-- 2.2 Preview6 -->
-                            <tr>
-                                <td rowspan="4">2.2 Preview6</td>
-                            </tr>
-                            <tr>
-                              <td >Windows</td>
-                              <td align="left"><a href="http://pan.baidu.com/s/1qYgXrNe">android-studio-ide-145.3070098-windows.zip</a></td>
-                              <td>449.3 MB</td>
-                              <td>a4ff7d33ef69d0dc1ce81502dc6d3c7c6d6d4c74</td>
-                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469jw1f60fnhnzskj20or0i8ahg.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                              <td><nobr>Mac OS X</nobr></td>
-                              <td align="left">
-                                        <a href="http://pan.baidu.com/s/1qYgXrNe">android-studio-ide-145.3070098-mac.zip</a>
-                              </td>
-                              <td>449.8 MB</td>
-                              <td>688db6908d64dd1201a35214a081176d4c711d3e</td>
-                            </tr>
-                            <tr>
-                              <td>Linux</td>
-                              <td align="left">
-                                        <a href="http://pan.baidu.com/s/1qYgXrNe">android-studio-ide-145.3070098-linux.zip</a>
-                              </td>
-                              <td>448.9 MB</td>
-                              <td>d48f8eafe931f3447e154ec929a9647daffc4561</td>
-                            </tr>
 
-                            <!-- 2.1.1 正式版 -->
+                            <!-- 2.1.2 正式版 -->
                             <tr>
-                              <td rowspan="6">2.1.1 正式版</td>
+                              <td rowspan="6">2.1.2 正式版</td>
                                 </tr>
                             <tr>
                               <td rowspan="3">Windows</td>
                               <td align="left">
-                                    <a href="http://pan.baidu.com/s/1gfyQ4Ob">android-studio-bundle-143.2821654-windows.exe</a><br>(推荐)
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.1.2.0/android-studio-bundle-143.2915827-windows.exe">android-studio-bundle-143.2915827-windows.exe</a><br>(推荐)
                               </td>
-                              <td>1181 MB</td>
-                              <td>6f7fcdc30800bd8b3fbd5a14c2b9857243144650</td>
-                              <td rowspan="6"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f3wqzmk9nqj20sp0gwwhr.jpg">查看</a></td>
+                              <td>1.2 GB</td>
+                              <td>9d677be09ccbb0195f52a429020b5bf0939e95d3</td>
+                              <td rowspan="6"><a href="http://ww4.sinaimg.cn/large/8a41f469gw1f6ve8k9nkij21kw15316t.jpg">查看</a></td>
                             </tr>
                             <tr>
-                              <td align="left"><a href="http://pan.baidu.com/s/1gfyQ4Ob">android-studio-ide-143.2821654-windows.exe</a><br>(不含SDK Tools)
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/install/2.1.2.0/android-studio-ide-143.2915827-windows.exe">android-studio-ide-143.2915827-windows.exe</a><br>(不含SDK Tools)
                               </td>
-                              <td>270 MB</td>
-                              <td>d8cb3968814b6155f4effe727baf23b18b9f8360</td>
+                              <td>277.4 MB</td>
+                              <td>e9bb11e348639637e44137e30f77a4b1e8783eb0</td>
                             </tr>
                             <tr>
-                              <td align="left"><a href="http://pan.baidu.com/s/1gfyQ4Ob">android-studio-ide-143.2821654-windows.zip</a></td>
-                              <td>286 MB</td>
-                              <td>9bec4905e40f0ac16ac7fde63a50f3fbc1eec4d9</td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.1.2.0/android-studio-ide-143.2915827-windows.zip">android-studio-ide-143.2915827-windows.zip</a></td>
+                              <td>293.4 MB</td>
+                              <td>2aa610308b23ee938dbd1f821675db763d68912c</td>
                             </tr>
                             <tr>
                               <td ><nobr>Mac OS X</nobr></td>
                               <td align="left">
-                                    <a href="http://pan.baidu.com/s/1mi4Hxfq">android-studio-ide-143.2821654-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.1.2.0/android-studio-ide-143.2915827-mac.dmg">android-studio-ide-143.2915827-mac.dmg</a>
                               </td>
-                              <td>284 MB</td>
-                              <td>4a7ca7532a95c65ee59ed50193c0e976f0272472</td>
+                              <td>291.5 MB</td>
+                              <td>689889cd434cb883b3fbdc61faa288de98754116</td>
                             </tr>
                             <tr>
                               <td>Linux</td>
                               <td align="left">
-                                        <a href="http://pan.baidu.com/s/1eRUvN3O">android-studio-ide-143.2821654-linux.zip</a>
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.1.2.0/android-studio-ide-143.2915827-linux.zip">android-studio-ide-143.2915827-linux.zip</a>
                               </td>
-                              <td>284 MB</td>
-                              <td>55d69ad2da0068d818718b26ba43550fbcbeb7e9</td>
+                              <td>291 MB</td>
+                              <td>d34c75ae2ca1cf472e21eb5301f43603082c6fd0</td>
                             </tr>
                         </tbody>
                     </table>
