add android studio beta2 link

--- a/index.html
+++ b/index.html
@@ -290,6 +290,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.2 beta2 -->
+                            <tr>
+                              <td rowspan="4">2.2 Beta2</td>
+                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-windows.zip">android-studio-ide-145.3200535-windows.zip</a></td>
+                              <td>461.5 MB</td>
+                              <td>d962191dcb2ee935e80193ebaaca929877859dd2</td>
+                              <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1f71hy3271wj21hl13wtug.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-mac.zip">android-studio-ide-145.3200535-mac.zip</a>
+                              </td>
+                              <td>462.1 MB</td>
+                              <td>89c86afa43715f47c78aed5df69e05f1bd3444c4</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-linux.zip">android-studio-ide-145.3200535-linux.zip</a>
+                              </td>
+                              <td>461.2 MB</td>
+                              <td>7064f43efde8b0f4fe12b9ed20eb05de87c24d41</td>
+                            </tr>
                             <!-- 2.1.3 正式版 -->
                             <tr>
                               <td rowspan="6">2.1.3 正式版</td>
