Fixed failure links

--- a/donate.html
+++ b/donate.html
@@ -21,6 +21,7 @@
 <body data-target=".content-nav">
     <header>
         <div class="container">
+        </div>
             <div class="row">
                 <div class="home">
                     <a href="index.html"><!-- <h1 id="nav-title">AndroidDevTools</h1> --><img class="logo" src="./static/image/androiddevtools_logo.svg" /></a>
@@ -1501,7 +1502,7 @@
                                 <td>17</td>
                                 <td>¥2.2</td>
                                 <td>Jay</td>
-                                <td>¥1</td>
+                                <td>¥1+¥2</td>
                             </tr>
                             <tr>
                                 <td></td>
