--- a/gay_friends.html
+++ b/gay_friends.html
@@ -21,6 +21,7 @@
 <body data-target=".content-nav">
     <header>
         <div class="container">
+        </div>
             <div class="row">
                 <div class="home">
                     <a href="index.html"><!-- <h1 id="nav-title">AndroidDevTools</h1> --><img class="logo" src="./static/image/androiddevtools_logo.svg" /></a>
