Added Android Studio 2.2 beta3 link

--- a/index.html
+++ b/index.html
@@ -286,6 +286,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.2 beta3 -->
+                            <tr>
+                              <td rowspan="4">2.2 Beta3</td>
+                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.9/android-studio-ide-145.3225885-windows.zip">android-studio-ide-145.3225885-windows.zip</a></td>
+                              <td>466.2 MB</td>
+                              <td>9edeb777aa61b9108f7163fcc948a8529214ef2c</td>
+                              <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1f71hy3271wj21hl13wtug.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.9/android-studio-ide-145.3225885-mac.zip">android-studio-ide-145.3225885-mac.zip</a>
+                              </td>
+                              <td>466.7 MB</td>
+                              <td>99f0ef3c1ae8d3a344be0d708c1a33f86c3a6c38</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.9/android-studio-ide-145.3225885-linux.zip">android-studio-ide-145.3225885-linux.zip</a>
+                              </td>
+                              <td>466.7 MB</td>
+                              <td>77a5291a921a7399f0b014fad55d6684af29b969</td>
+                            </tr>
                             <!-- 2.2 beta2 -->
                             <tr>
                               <td rowspan="4">2.2 Beta2</td>
