Replace duoshuo key

--- a/donate.html
+++ b/donate.html
@@ -1532,7 +1532,7 @@
                                 <td></td>
                                 <td>¥1</td>
                                 <td></td>
-                                <td></td>
+                                <td>¥8.8</td>
                             </tr>
                         </tbody>
                     </table>
@@ -1564,7 +1564,7 @@
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
     <script type="text/javascript">
     var duoshuoQuery = {
-        short_name: "donateandroiddevtools"
+        short_name: "androiddevtoolscndonate"
     };
     (function() {
         var ds = document.createElement('script');
