--- a/gay_friends.html
+++ b/gay_friends.html
@@ -270,7 +270,7 @@
     </script>
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 	<script type="text/javascript">
-	var duoshuoQuery = {short_name:"androiddevtoolsgfriends"};
+	var duoshuoQuery = {short_name:"androiddevtoolscngfriends"};
 		(function() {
 			var ds = document.createElement('script');
 			ds.type = 'text/javascript';ds.async = true;
