--- a/index.html
+++ b/index.html
@@ -4202,7 +4202,7 @@
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
     <script type="text/javascript">
         var duoshuoQuery = {
-            short_name: "androiddevtools"
+            short_name: "androiddevtoolscn"
         };
         (function() {
             var ds = document.createElement('script');
