Add Android Studio 2.2 RC Link

--- a/index.html
+++ b/index.html
@@ -286,6 +286,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.2 RC -->
+                            <tr>
+                              <td rowspan="4">2.2 RC</td>
+                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.10/android-studio-ide-145.3240973-windows.zip">android-studio-ide-145.3240973-windows.zip</a></td>
+                              <td>466.2 MB</td>
+                              <td>f4180ff3d0afb949165f8ced62c3202914125293</td>
+                              <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1f7bih8ndefj21e812cgvq.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.10/android-studio-ide-145.3240973-mac.zip">android-studio-ide-145.3240973-mac.zip</a>
+                              </td>
+                              <td>466.7 MB</td>
+                              <td>9ea687645dc8a2f2a1dc0734a571a23fac6c54a2</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.10/android-studio-ide-145.3240973-linux.zip">android-studio-ide-145.3240973-linux.zip</a>
+                              </td>
+                              <td>466.7 MB</td>
+                              <td>bfed1c30a3727ec5ccb2c72424ce5f34d1228a52</td>
+                            </tr>
                             <!-- 2.2 beta3 -->
                             <tr>
                               <td rowspan="4">2.2 Beta3</td>
