Add Android Studio RC2 Link

--- a/index.html
+++ b/index.html
@@ -286,6 +286,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                             <!-- 2.2 RC2 -->
+                            <tr>
+                              <td rowspan="4">2.2 RC2</td>
+                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.11/android-studio-ide-145.3253452-windows.zip">android-studio-ide-145.3253452-windows.zip</a></td>
+                              <td>466.2 MB</td>
+                              <td>086fa185e2e8c155909589a95c85578ee1bc7465</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/801b780agw1f7ncfqd3jdj20q40mktfl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.11/android-studio-ide-145.3253452-mac.zip">android-studio-ide-145.3253452-mac.zip</a>
+                              </td>
+                              <td>466.7 MB</td>
+                              <td>2d98d35ae277c5cb16484193f4e8beb9cd7623d5</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.11/android-studio-ide-145.3253452-linux.zip">android-studio-ide-145.3253452-linux.zip</a>
+                              </td>
+                              <td>466.7 MB</td>
+                              <td>38046857e008d059ca1a1655dc4f4d2250bbc157</td>
+                            </tr>
                             <!-- 2.2 RC -->
                             <tr>
                               <td rowspan="4">2.2 RC</td>
