Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1487,17 +1487,17 @@
                             <tr>
                                 <td>响马爱吃西红柿</td>
                                 <td>¥1.1</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥10.24</td>
                                 <td>无尽被动</td>
                                 <td>¥10.24</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥2</td>
                             </tr>
                             <tr>
                                 <td>不胖</td>
                                 <td>¥10</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥5</td>
                                 <td>17</td>
                                 <td>¥2.2</td>
@@ -1505,17 +1505,17 @@
                                 <td>¥1+¥2</td>
                             </tr>
                             <tr>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥10</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥10</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥3</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥8.88</td>
                             </tr>
                             <tr>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥4.99</td>
                                 <td>红军二百五</td>
                                 <td>¥10.24</td>
@@ -1525,20 +1525,20 @@
                                 <td>¥5</td>
                             </tr>
                             <tr>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥10</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥2.99</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥1</td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
                                 <td>¥8.8</td>
                             </tr>
                             <tr>
                                 <td>华昌</td>
                                 <td>¥10</td>
-                                <td></td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
+                                <td>¥19.99</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
