Add donate info

--- a/donate.html
+++ b/donate.html
@@ -147,6 +147,7 @@
                                     <a href="https://github.com/inferjay/AndroidDevTools"  data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
                                 </li>
                             </ul>
+                        </ul>
                     </menu>
                 </div>
             </div>
@@ -524,8 +525,7 @@
                                 <td>¥1</td>
                             </tr>
                             <tr>
-                                <td>黄鹏</a>
-                                </td>
+                                <td>黄鹏</td>
                                 <td>¥1.5</td>
                                 <td>kasterlar</td>
                                 <td>¥5</td>
@@ -1539,8 +1539,8 @@
                                 <td>¥10</td>
                                 <td>捐赠来自微信</td>
                                 <td>¥19.99</td>
-                                <td></td>
-                                <td></td>
+                                <td>落雁沙</td>
+                                <td>¥5</td>
                                 <td></td>
                                 <td></td>
                             </tr>
