Add Android Studio 2.2 正式版 Link

--- a/index.html
+++ b/index.html
@@ -286,7 +286,47 @@
                             </tr>
                         </thead>
                         <tbody>
-                             <!-- 2.2 RC2 -->
+                            <!-- 2.1.2 正式版 -->
+                            <tr>
+                              <td rowspan="6">2.2 正式版</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="3">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.0.12/android-studio-bundle-145.3276617-windows.exe">android-studio-bundle-145.3276617-windows.exe</a><br>(推荐)
+                              </td>
+                              <td>1608 MB</td>
+                              <td>04321c38b42d1aca901509d92174f8b42e37b1e9</td>
+                              <td rowspan="6"><a href="http://ww3.sinaimg.cn/large/65e4f1e6gw1f801v49l63j20xi0pyzoj.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/install/2.2.0.12/android-studio-ide-145.3276617-windows.exe">android-studio-ide-145.3276617-windows.exe</a><br>(不含SDK Tools)
+                              </td>
+                              <td>407 MB</td>
+                              <td>9d94f24be62e68c7fb004e4813155f5fc41b92f5</td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.12/android-studio-ide-145.3276617-windows.zip">android-studio-ide-145.3276617-windows.zip</a></td>
+                              <td>428 MB</td>
+                              <td>fe47002865b292d5ed8e14acc64731dbc57251c0</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.0.12/android-studio-ide-145.3276617-mac.dmg">android-studio-ide-145.3276617-mac.dmg</a>
+                              </td>
+                              <td>423 MB</td>
+                              <td>e8230bed054719836caa2710c1036c19a0693b5f</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.12/android-studio-ide-145.3276617-linux.zip">android-studio-ide-145.3276617-linux.zip</a>
+                              </td>
+                              <td>428 MB</td>
+                              <td>4eec979ad4d216fd591ebe0112367c746cedb114</td>
+                            </tr>
+                            <!-- 2.2 RC2 -->
                             <tr>
                               <td rowspan="4">2.2 RC2</td>
                                 </tr>
