--- a/donate.html
+++ b/donate.html
@@ -1541,8 +1541,18 @@
                                 <td>¥19.99</td>
                                 <td>落雁沙</td>
                                 <td>¥5</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥10</td>
+                            </tr>
+                            <tr>
+                                <td>捐赠来自微信</td>
+                                <td>¥4</td>
                                 <td></td>
+                                <td>¥</td>
                                 <td></td>
+                                <td>¥</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥</td>
                             </tr>
                         </tbody>
                     </table>
