--- a/donate.html
+++ b/donate.html
@@ -1547,8 +1547,8 @@
                             <tr>
                                 <td>捐赠来自微信</td>
                                 <td>¥4</td>
-                                <td></td>
-                                <td>¥</td>
+                                <td>捐赠来自微信</td>
+                                <td>¥2.33</td>
                                 <td></td>
                                 <td>¥</td>
                                 <td>捐赠来自微信</td>
