Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1549,8 +1549,8 @@
                                 <td>¥4</td>
                                 <td>捐赠来自微信</td>
                                 <td>¥2.33</td>
-                                <td></td>
-                                <td>¥</td>
+                                <td>AZ磊磊磊</td>
+                                <td>¥10.24</td>
                                 <td>捐赠来自微信</td>
                                 <td>¥</td>
                             </tr>
