Add a gay friend link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -226,6 +226,11 @@
                                 <img src="http://ww3.sinaimg.cn/large/8a41f469jw1f62jpc97ujj203m01sq2q.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="http://www.gcssloop.com" target="_blank" title="一名来自2.5次元的魔法师，Android自定义View系列文章作者，非著名程序员">
+                                <img src="http://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
