--- a/donate.html
+++ b/donate.html
@@ -1552,7 +1552,17 @@
                                 <td>AZ磊磊磊</td>
                                 <td>¥10.24</td>
                                 <td>捐赠来自微信</td>
-                                <td>¥</td>
+                                <td>¥1</td>
+                            </tr>
+                            <tr>
+                                <td>捐赠来自微信</td>
+                                <td>¥2</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
