--- a/donate.html
+++ b/donate.html
@@ -1557,8 +1557,8 @@
                             <tr>
                                 <td>捐赠来自微信</td>
                                 <td>¥2</td>
-                                <td></td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
+                                <td>¥5</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
