--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         </div>
     </header>
 <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-        <a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07', 'AD', 'click');" target="_blank">
-            <img src="http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg">
+        <a href="http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png" title="七牛直播云服务" onclick="trackOutboundLink('http://www.qiniu.com/products/pili?utm_campaign=zhiboyunsdk&utm_source=androiddevtools&utm_medium=advposition&utm_content=png', 'AD', 'click');" target="_blank">
+            <img src="http://ww1.sinaimg.cn/large/006y8mN6gw1f8v9lx2lrhj304605kdgb.jpg">
         </a>
     </div>
 <!--<div>
